--- a/packages/admin/src/App.css
+++ b/packages/admin/src/App.css
@@ -1,13 +1,20 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+html,
+body {
+  overflow: hidden;
 }
-
+a:hover {
+  color: inherit;
+}
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  /* height: 6em;
+  padding: 1.5em; */
+  background: #2b2f3a;
+  height: 64px;
+  line-height: 64px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width: 100%;
   will-change: filter;
   transition: filter 300ms;
 }
